--- a/01_Элементы_компоновки/01_Canvas/01_Canvas/MainWindow.xaml
+++ b/01_Элементы_компоновки/01_Canvas/01_Canvas/MainWindow.xaml
@@ -1,15 +1,33 @@
-﻿<Window x:Class="_01_Canvas.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:_01_Canvas"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Canvas Width="300"
-                Height="300" Background="Aqua">
-        </Canvas>
+﻿<Window x:Class       ="_01_Canvas.MainWindow"
+        xmlns         ="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:x       ="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:d       ="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:mc      ="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        mc:Ignorable  ="d"
+        Title         ="CanvasExample"
+        Height        ="480"
+        Width         ="640"
+        >
+    <Grid ShowGridLines="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        
+        <StackPanel Grid.Column="0">
+            <Button x:Name="_01_Canvas"
+                    Content="Пример 1 - Canvas__01"
+                    Background="#FF1F8CD4"
+                    HorizontalContentAlignment="Left"
+                    FontWeight="Bold"
+                    FontStyle="Italic"
+                    Click="_01_Canvas_Click">
+            </Button>
+        </StackPanel>
 
+        <Frame x:Name="_frame"
+               Grid.Column="1"
+               Background="LightGreen">
+        </Frame>
     </Grid>
 </Window>
