--- a/01_Элементы_компоновки/02_StackPanel/02_StackPanel/MainWindow.xaml
+++ b/01_Элементы_компоновки/02_StackPanel/02_StackPanel/MainWindow.xaml
@@ -6,7 +6,17 @@
         xmlns:local="clr-namespace:_02_StackPanel"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
+    <Grid ShowGridLines="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
 
+        
+        
     </Grid>
 </Window>
