--- a/01_Элементы_компоновки/01_Canvas/MainWindow.xaml
+++ b/01_Элементы_компоновки/01_Canvas/MainWindow.xaml
@@ -5,10 +5,63 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_01_Canvas"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Canvas>
-            <Button Content="dsdasdsd"></Button>
+        Title="MainWindow" 
+        Height="460" 
+        Width="680">
+
+    <Grid ShowGridLines="True">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+
+        <Canvas Width="200" Height="200"
+             Background="LightGreen">
+
+            <Button Canvas.Bottom="15" Canvas.Right="15"
+                 Content="Кнопка" Background="Indigo">
+            </Button>
+
+            <Ellipse Canvas.Top="10" Canvas.Left="20"
+                  Height="50" Width="80" Fill="Brown">
+            </Ellipse>
+
+            <Rectangle Canvas.Top="80" Canvas.Left="50"
+                    Height="50" Width="100" Fill="Blue">
+            </Rectangle>
+
+        </Canvas>
+
+        <!-- Пример обработки событий -->
+        <Canvas x:Name="_canvas"
+             Height="200"
+             Grid.Column="1"
+             Background="Azure" 
+             MouseMove="EvMouseMove" 
+             SizeChanged="EvSizeChanged" 
+             KeyDown="EvKeyDown"
+             Focusable="True">
+
+            <Label x:Name="_label"
+                Canvas.Top="50"
+                Canvas.Left="100"
+                Width="100"
+                Height="30"
+                Content="Координаты">
+            </Label>
+
+            <Button x:Name="_button"
+                 Padding="5"
+                 Canvas.Top="100"
+                 Canvas.Left="100"
+                 Content="Изменить размер"
+                 Click="EvClick">
+            </Button>
+
         </Canvas>
     </Grid>
 </Window>
