--- a/01_Элементы_компоновки/05_Grid/MainWindow.xaml
+++ b/01_Элементы_компоновки/05_Grid/MainWindow.xaml
@@ -5,8 +5,23 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_05_Grid"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-
+        Title="MainWindow" Height="460" Width="680">
+    <!-- ShowGridLines="True" - Отображение разделителя-->
+    <Grid ShowGridLines="True">
+        <!-- Создание 3х строк-->
+        <Grid.RowDefinitions>
+            <RowDefinition/>
+            <RowDefinition/>
+            <RowDefinition/>
+        </Grid.RowDefinitions>
+        
+        <!-- Создание 3х столбцов -->
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        
+        
     </Grid>
 </Window>
