--- a/01_Элементы_компоновки/05_Grid/MainWindow.xaml
+++ b/01_Элементы_компоновки/05_Grid/MainWindow.xaml
@@ -12,16 +12,18 @@
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition/>
-            <RowDefinition/>
         </Grid.RowDefinitions>
         
         <!-- Создание 3х столбцов -->
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
-            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        
-        
+
+        <Button Grid.Row="0" Grid.Column="0" Content="Кнопка 1" Background="Aqua"/>
+        <Button Grid.Row="0" Grid.Column="1" Content="Кнопка 2" Background="Azure"/>
+        <Button Grid.Row="1" Grid.Column="0" Content="Кнопка 3" Background="Bisque"/>
+        <Button Grid.Row="1" Grid.Column="1" Content="Кнопка 4" Background="Beige"/>
+
     </Grid>
 </Window>
