--- a/01_Элементы_компоновки/05_Grid/MainWindow.xaml
+++ b/01_Элементы_компоновки/05_Grid/MainWindow.xaml
@@ -5,8 +5,60 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:_05_Grid"
         mc:Ignorable="d"
-        Title="MainWindow" Height="460" Width="680">
-    <!-- ShowGridLines="True" - Отображение разделителя-->
+        Title="MainWindow" Height="500" Width="680">
+
+    <StackPanel Background="AntiqueWhite">
+        
+        <Grid Height="100" Margin="10" ShowGridLines="True">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Background="LightCyan"  Content="Width=150"/>
+            <Button Background="LightBlue" Grid.Column="1" Content="Width=*"/>
+        </Grid>
+        
+        <Grid Height="100" Margin="10" ShowGridLines="True">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Background="LightCyan" Content="Width=150"/>
+            <Button Background="Aqua" Grid.Column="1" Content="Width=*"/>
+            <Button Background="Aquamarine" Grid.Column="2" Content="Width=*"/>
+            <Button Background="Azure" Grid.Column="3" Content="Width=*"/>
+        </Grid>
+        
+        <Grid Height="100" Margin="10" ShowGridLines="True">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Button Background="LightCyan" Content="Width=150"/>
+            <Button Background="Bisque" Grid.Column="1" Content="Width=*"/>
+            <Button Background="Beige"  Grid.Column="2" Content="Width=2*"/>
+            <Button Background="AliceBlue"  Grid.Column="3" Content="Width=*"/>
+        </Grid>
+        
+        <Grid Height="100" Margin="10" ShowGridLines="True">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="2*"/>
+                <ColumnDefinition Width="4*"/>
+                <ColumnDefinition Width="3*"/>
+            </Grid.ColumnDefinitions>
+            <Button Background="LightCyan" Content="Width=150"/>
+            <Button Background="BurlyWood"  Grid.Column="1" Content="Width=2*"/>
+            <Button Background="Cornsilk"  Grid.Column="2" Content="Width=4*"/>
+            <Button Background="Azure"  Grid.Column="3" Content="Width=3*"/>
+        </Grid>
+    </StackPanel>
+    
+    <!--
     <Grid ShowGridLines="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
@@ -14,14 +66,19 @@
         </Grid.RowDefinitions>
         
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="500"/>
-            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="100"/>
+            <ColumnDefinition Width="100"/>
         </Grid.ColumnDefinitions>
 
-        <Button Grid.Row="0" Grid.Column="0" Content="Кнопка 1" Background="Aqua"/>
+        <Grid.Resources>
+            <Style TargetType="Button" BasedOn="{StaticResource style1}"/>
+        </Grid.Resources>
+        
+        <Button Grid.Row="0" Grid.Column="0" Content="Wid" Background="Aqua"/>
         <Button Grid.Row="0" Grid.Column="1" Content="Кнопка 2" Background="Azure"/>
         <Button Grid.Row="1" Grid.Column="0" Content="Кнопка 3" Background="Bisque"/>
         <Button Grid.Row="1" Grid.Column="1" Content="Кнопка 4" Background="Beige"/>
 
     </Grid>
+    -->
 </Window>
