CheckBox обработка событий

--- a/02_Элементы_управления/02_CheckBox_and_RadioButton/MainWindow.xaml
+++ b/02_Элементы_управления/02_CheckBox_and_RadioButton/MainWindow.xaml
@@ -6,7 +6,31 @@
         xmlns:local="clr-namespace:_02_CheckBox_and_RadioButton"
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
+
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+
+        <StackPanel Grid.Column="0" Grid.Row="0" Background="AliceBlue">
+            <CheckBox IsThreeState="True" IsChecked="False"    Height="30" Content="Неотмечено" />
+            <CheckBox IsThreeState="True" IsChecked="True"     Height="30" Content="Отмечено" />
+            <CheckBox IsThreeState="True" IsChecked="{x:Null}" Height="30" Content="Неопределено"/>
+
+            <CheckBox x:Name="bigCheckBox" 
+                      Width="60" Height="50"
+                      Content="BigBox"
+                      Checked="bigCheckBox_Checked"
+                      Unchecked="bigCheckBox_Unchecked"
+                      Indeterminate="bigCheckBox_Indeterminate"
+                      IsThreeState="True"
+                      >
+                <CheckBox.LayoutTransform>
+                    <ScaleTransform ScaleX="4" ScaleY="4" />
+                </CheckBox.LayoutTransform>
+            </CheckBox>
+        </StackPanel>
 
     </Grid>
 </Window>
