Expander Пример работы

--- a/02_Элементы_управления/04_GroupBox_and_Expander/MainWindow.xaml
+++ b/02_Элементы_управления/04_GroupBox_and_Expander/MainWindow.xaml
@@ -7,7 +7,19 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
     <Grid>
-        <GroupBox Margin="10" Padding="5" 
+
+        <Expander Header="Список языков" Margin="10">
+            <StackPanel>
+                <RadioButton Margin="5">C++</RadioButton>
+                <RadioButton Margin="5">C#</RadioButton>
+                <RadioButton Margin="5">C</RadioButton>
+                <RadioButton Margin="5">Python</RadioButton>
+                <Button Margin="5" Width="100" 
+                        HorizontalAlignment="Left" Content="Отправить"/>
+            </StackPanel>
+        </Expander>
+        
+        <!--<GroupBox Margin="10" Padding="5" 
                   Background="AliceBlue"
                   Header="Список языков"
                   >
@@ -19,7 +31,7 @@
                 <Button Margin="5" Width="100" 
                         HorizontalAlignment="Left" Content="Отправить"/>
             </StackPanel>
-        </GroupBox>
+        </GroupBox>-->
 
     </Grid>
 </Window>
