Scroll Пример работы

--- a/02_Элементы_управления/05_ScrollViewer/MainWindow.xaml
+++ b/02_Элементы_управления/05_ScrollViewer/MainWindow.xaml
@@ -7,6 +7,14 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="360" Width="480">
     <Grid>
+        <ScrollViewer HorizontalScrollBarVisibility="Auto">
+            <StackPanel>
+                <TextBlock TextWrapping="Wrap" Margin="10">
+                    Пример прокрутки
+                </TextBlock>
+                <Rectangle Fill="LightBlue"  Width="500" Height="500"></Rectangle>
+            </StackPanel>
+        </ScrollViewer>
 
     </Grid>
 </Window>
