--- a/02_Элементы_управления/06_TextElements/MainWindow.xaml
+++ b/02_Элементы_управления/06_TextElements/MainWindow.xaml
@@ -8,5 +8,31 @@
         Title="MainWindow" Height="360" Width="480">
     <Grid>
 
+        <TabControl>
+            
+            <TabItem Header="TextBlock" FontWeight="Bold">
+                <StackPanel Background="AliceBlue">
+                    <TextBlock FontSize="20">TextBlock1</TextBlock>
+                    <TextBlock FontSize="20" Text="TextBlock3" Foreground="DarkBlue"/>
+                    <TextBlock FontSize="20" Text="TextBlock2"/>
+                    <TextBlock FontSize="20" Text="TextBloc4" FontWeight="Normal"/>
+                    <TextBlock.Foreground>
+                        <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                            <GradientStop Color="Blue" Offset="0.1" />
+                            <GradientStop Color="Green" Offset="0.75" />
+                        </LinearGradientBrush>
+                    </TextBlock.Foreground>
+                </StackPanel>    
+            </TabItem>
+            
+            <TabItem Header="TextBox" FontWeight="Bold"></TabItem>
+            
+            <TabItem Header="Password" FontWeight="Bold"></TabItem>
+            
+            <TabItem Header="RichTextBox" FontWeight="Bold"></TabItem>
+            
+            <TabItem Header="Label" FontWeight="Bold"></TabItem>
+        </TabControl>
+        
     </Grid>
 </Window>
